# QK4

./: .clang-format  .gitignore  CHANGELOG.md  CLEANUP_CANDIDATES.md  CMakeLists.txt  CONVENTIONS.md  LICENSE  PATTERNS.md  README.md  RULES.md  STATUS.md  cliff.toml
.github/scripts/: build-pi.sh
.github/workflows/: build-macos.yml  build-raspberry-pi.yml  build-windows.yml  build.yml  codeql.yml  lint.yml  release.yml  test.yml
cmake/: toolchain-aarch64-linux.cmake
docs/: DEVLOG.md  K4STYLES_REFERENCE.md  UI_COMPONENTS.md  iambic-keyer-design.md
installer/: qk4.nsi
resources/: 99-kpod.rules  Info.plist.in  K4Controller.icns  K4Controller.rc.in  QK4.entitlements  QK4.rc.in  k4_cat_commands.json
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/audio/: audioengine.cpp  audioengine.h  opusdecoder.cpp  opusdecoder.h  opusencoder.cpp  opusencoder.h  sidetonegenerator.cpp  sidetonegenerator.h
src/dsp/: minipan_rhi.cpp  minipan_rhi.h  minipanwidget.cpp  minipanwidget.h  panadapter.cpp  panadapter.h  panadapter_rhi.cpp  panadapter_rhi.h  rhi_utils.h  spectrum.cpp  spectrum.h  waterfall.cpp  waterfall.h
src/dsp/shaders/: overlay.frag  overlay.vert  spectrum.frag  spectrum.vert  spectrum_blue.frag  spectrum_blue_amp.frag  spectrum_fill.frag  spectrum_fill.vert  waterfall.frag  waterfall.vert
src/hardware/: halikeydevice.cpp  halikeydevice.h  halikeymidiworker.cpp  halikeymidiworker.h  halikeyv14worker.cpp  halikeyv14worker.h  halikeyworker.cpp  halikeyworker.h  halikeyworkerbase.cpp  halikeyworkerbase.h  kpoddevice.cpp  kpoddevice.h
src/keyer/: iambickeyer.cpp  iambickeyer.h
src/models/: menumodel.cpp  menumodel.h  radiostate.cpp  radiostate.h
src/network/: catserver.cpp  catserver.h  kpa1500client.cpp  kpa1500client.h  protocol.cpp  protocol.h  rigctldserver.cpp  rigctldserver.h  tcpclient.cpp  tcpclient.h
src/settings/: radiosettings.cpp  radiosettings.h
src/ui/: antennacfgpopup.cpp  antennacfgpopup.h  baloverlay.cpp  baloverlay.h  bandpopupwidget.cpp  bandpopupwidget.h  bottommenubar.cpp  bottommenubar.h  buttonrowpopup.cpp  buttonrowpopup.h  displaypopupwidget.cpp  displaypopupwidget.h  dualcontrolbutton.cpp  dualcontrolbutton.h  featuremenubar.cpp  featuremenubar.h  filterindicatorwidget.cpp  filterindicatorwidget.h  fnpopupwidget.cpp  fnpopupwidget.h  frequencydisplaywidget.cpp  frequencydisplaywidget.h  k4popupbase.cpp  k4popupbase.h  k4styles.cpp  k4styles.h  kpa1500panel.cpp  kpa1500panel.h  kpa1500window.cpp  kpa1500window.h  lineinpopup.cpp  lineinpopup.h  lineoutpopup.cpp  lineoutpopup.h  macrodialog.cpp  macrodialog.h  menuoverlay.cpp  menuoverlay.h  micconfigpopup.cpp  micconfigpopup.h  (+38 more)
tests/: test_iambickeyer.cpp  test_menumodel.cpp  test_protocol.cpp  test_radiostate.cpp
